# ipa-whisper-assessor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  example_reference.txt
scripts/: benchmark_folder.py  make_report.py
src/ipa_whisper_assessor/: align.py  audio.py  cli.py  edit_distance.py  g2p.py  ipa_normalize.py  ipa_tokenize.py  report.py  schemas.py  score.py  transcribe.py
tests/: test_align.py  test_g2p.py  test_ipa_tokenize.py
